Fixed visibility of canvas before canvas generation.

--- a/css/pixel-editor.scss
+++ b/css/pixel-editor.scss
@@ -50,6 +50,7 @@ canvas {
   width: 400px;
   height: 400px;
   position: fixed;
+  display:none;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.64);
 }
 
